feat: get product by revision id
